--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,3 +1,10 @@
+#################################################################################
+#	Filename:		~/.config/neofetch/config.conf								#
+#	Purpose:		Config file for neofetch									#
+#	Authors:		Giulio Coa <34110430+giulioc008@users.noreply.github.com>	#
+#	License:		This file is licensed under the LGPLv3.						#
+#################################################################################
+
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
