--- a/check_IP/.gitignore
+++ b/check_IP/.gitignore
@@ -1,20 +1,3 @@
-### CMake ###
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-
-### CMake Patch ###
-# External projects
-*-prefix/
-
 ### DotfilesSh ###
 local-patch
 patched-src
@@ -78,5 +61,5 @@ tags
 *_LOCAL_*.txt
 *_REMOTE_*.txt
 
-### VSCode ###
-.vscode/
+### Personal ###
+.env
