refactor(all): rewrite the code, remove useless file and add some features
Remove a useless file (kill.sh).
Rewrite the code in order to add comments, remove useless piece of code and fix some bugs
Add some features (case-insensitive Bash completion, etc.)

Signed-off-by: Giulio Coa <giulioc008@gmail.com>

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,14 @@
 [user]
 	name = Mario Rossi
 	email = mail_to@provider.com
+	signingkey = IVMNZ7MTBVUWP1JT
 [credential]
 	helper = store
 [pull]
 	rebase = false
+[commit]
+	gpgSign = true
+[gui]
+	pruneduringfetch = true
+[push]
+	recurseSubmodules = check
