--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 
-### CMake Patch ###
 # External projects
 *-prefix/
 
@@ -78,5 +77,20 @@ tags
 *_LOCAL_*.txt
 *_REMOTE_*.txt
 
-### VSCode ###
-.vscode/
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+# Ignore all local history of files
+.history
+.ionide
