--- a/.vim/.gitignore
+++ b/.vim/.gitignore
@@ -1,3 +1,8 @@
+### Kate ###
+# Swap Files #
+.*.kate-swp
+.swp.*
+
 ### Linux ###
 *~
 
@@ -16,6 +21,7 @@
 ### Vim ###
 # Swap
 [._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
 [._]*.sw[a-p]
 [._]s[a-rt-v][a-z]
 [._]ss[a-gi-z]
@@ -27,9 +33,7 @@ Sessionx.vim
 
 # Temporary
 .netrwhist
-
 # Auto-generated tag files
 tags
-
 # Persistent undo
 [._]*.un~
